--- a/practice-1/index.html
+++ b/practice-1/index.html
@@ -6,9 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h2>My github desktop</h2>
-    <ul>
-        <li><a href="/practice-1/index.html">Practice 1</a></li>
-    </ul>
+    <h2>This is practice 1</h2>
 </body>
 </html>
